load("@aspect_bazel_lib//lib:transitions.bzl", "platform_transition_filegroup")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load", "oci_push")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("//bazel:defs.bzl", "nt_rust_binary", "nt_rust_library", "nt_rust_test")

package(default_visibility = ["//visibility:public"])

# ADR-MCPS-048 / MCPS-69 — these HITL live-cloud KMS tests are intentionally
# cargo-only (no Bazel target): each is `#![cfg(feature = "…kms…")]` + `#[ignore]`
# and runs ONLY in the manual live-infra lane (`cargo test --features … --
# --ignored` against real AWS/GCP KMS):
#   tests/aws_kms_live_test.rs, tests/gcp_kms_live_test.rs,
#   tests/gcp_kms_draft02_live_test.rs, tests/gcp_kms_delegated_tls_live_test.rs
# NOTE: gazelle_rust's `generate_from_cargo` mode enumerates test targets from
# Cargo metadata, so `# gazelle:exclude <file>` does NOT suppress them — gazelle
# will always PROPOSE a target for each in `-mode diff`. This is a documented
# advisory-diff false-positive; MCPS-70's staleness gate must allowlist them (and
# not auto-adopt gazelle write output wholesale). Do NOT add Bazel targets here.

# Single source of truth for the mcp_re_proxy library sources. The default
# `:mcp_re_proxy` library and the feature-flavored `:mcp_re_proxy_fault` /
# `:mcp_re_proxy_dev_env` instances (each a full rebuild of the same crate under a
# `#[cfg(feature = ...)]` fault/dev gate) ALL compile this exact file set — sharing
# the list here prevents the instances from silently drifting apart.
_PROXY_LIB_SRCS = [
    # ADR-MCPS-022: explicit authorized server key-set + per-audience response-
    # signing identity mode (per_node_keyset / shared_remote_signer).
    "src/authorized_keyset.rs",
    # ADR-MCPS-028 §B: native AWS KMS Ed25519 response signer (blocking ureq HTTPS +
    # minimal audited SigV4; behind #[cfg(feature = "aws_kms_keysource")], cfg'd out
    # of the default build). No async aws-sdk-kms/tokio (ADR-MCPS-018 lean-sync).
    "src/aws_kms_keysource.rs",
    "src/aws_sigv4.rs",
    "src/cli.rs",
    # ADR-MCPRE-051 §6 (MCPRE-116): versioned serving-config snapshot + in-process
    # CRL hot-reloader. Pure std; always compiled by every flavor.
    "src/config_snapshot.rs",
    # ADR-MCPS-028 §C: native GCP Cloud KMS Ed25519 response signer (blocking ureq
    # HTTPS + OAuth2 bearer; behind #[cfg(feature = "gcp_kms_keysource")], cfg'd out
    # of the default build). No async google-cloud SDK (ADR-MCPS-018 lean-sync).
    "src/gcp_kms_keysource.rs",
    # Issue #3838 (ADR-MCPS-014): non-exporting reference ResponseSigner proving the
    # response-signing delegation seam. Always compiled; default-build, Bazel-tested.
    "src/delegated_response_signer.rs",
    # ADR-MCPS-028 §G: delegated TLS handshake signing (rustls SigningKey fronting a
    # non-exporting device/KMS). Generic mechanism, always compiled.
    "src/delegated_tls.rs",
    "src/durable_replay.rs",
    "src/inner_launch.rs",
    "src/key_source.rs",
    # ADR-MCPS-028: provider-agnostic cloud-KMS response signer core (the shared
    # protocol mapping behind the #3838 delegation seam). Always compiled.
    "src/kms_keysource.rs",
    "src/lib.rs",
    "src/persistent_inner.rs",
    "src/proxy.rs",
    # Issue #4034: PKCS#11/HSM-backed KeySource (behind #[cfg(feature =
    # "pkcs11_keysource")]; cfg'd out of the default build).
    "src/pkcs11_keysource.rs",
    # Issue #4034 supply-chain follow-up: the OWNED safe wrapper over the raw
    # cryptoki-sys FFI bindings (replaces the high-level cryptoki crate +
    # transitive unmaintained `paste`). Same `pkcs11_keysource` feature gate.
    "src/pkcs11_native.rs",
    # Issue #4030: online OCSP client-cert revocation (behind #[cfg(feature =
    # "online_ocsp")]; cfg'd out of the default build).
    "src/ocsp.rs",
    # Issue #4028: Redis-backed shared atomic ReplayCache (behind #[cfg(feature =
    # "redis_replay")]; cfg'd out of the default build).
    "src/redis_store.rs",
    # Issue #69 (epic #68 v0.4 Axis 1): etcd-backed CP / LINEARIZABLE shared atomic
    # ReplayCache (behind #[cfg(feature = "cpstore_etcd")]; cfg'd out of the default
    # build).
    "src/etcd_store.rs",
    # ADR-MCPS-020: declared replay-store durability tier (deployment assertion).
    "src/replay_tier.rs",
    # ADR-MCPS-021 Axis 2: declared revocation tier (Tier 1 bounded-cache / Tier 2
    # live / Tier 3 push) — semantic names + honest per-tier guarantee. Pure type.
    "src/revocation_tier.rs",
    # ADR-MCPS-021 Tier 2: live strong trust check (no positive caching, optional
    # second live revocation authority, fail-closed on outage).
    "src/live_trust.rs",
    # ADR-MCPS-021 Tier 3: push-invalidation trust cache (bounded-T cache + injected
    # invalidation channel; bounded-T fallback when the channel is unhealthy).
    "src/push_trust.rs",
    "src/rlimits.rs",
    # Issue #3865 / #4039: OS sandbox profile + fail-closed platform gate, plus the
    # Linux Landlock/seccomp ENFORCEMENT backend (sandbox_linux.rs is
    # #[cfg(target_os = "linux")] — excluded from the Mac build entirely).
    "src/sandbox.rs",
    "src/sandbox_linux.rs",
    # Issue #3837: shared, server-side-atomic replay cache (backend-agnostic core +
    # in-memory reference store). Always compiled; default-build, Bazel-tested.
    "src/shared_replay.rs",
    "src/tls.rs",
    # ADR-MCPRE-051 Phase 2 (§1): opt-in async serving path. #[cfg(feature =
    # "async_serve")] — compiled ONLY by the `:mcp_re_proxy_async` flavor + its
    # tests; the default/production flavors see an absent module and link no
    # tokio/hyper (ADR-MCPS-018 lean-sync firewall).
    "src/async_serve.rs",
    # MCPRE-113 (ADR-MCPRE-051 §1, Phase 2): the per-core serving fleet (per-core
    # tokio runtimes + SO_REUSEPORT listeners + Linux CPU pinning). Same
    # #[cfg(feature = "async_serve")] gate as async_serve.rs — invisible to the
    # default closure.
    "src/async_fleet.rs",
    # MCPRE-117 (ADR-MCPRE-051 §4, Phase 2): the async authoritative replay tier seam
    # (async store contract + L1-never-Fresh wrapper). Same #[cfg(feature =
    # "async_serve")] gate — invisible to the default closure.
    "src/async_replay.rs",
    "src/transport.rs",
    # ADR-MCPS-021: bounded trust-propagation cache (revocation window T).
    "src/trust_cache.rs",
    # MCPS-84 (ADR-MCPS-049 W2): trust-epoch invalidation source (Redis reader is
    # redis_replay-gated inside the module).
    "src/trust_epoch.rs",
]

# Single source of truth for the mcp_re_proxy library deps. All three library
# instances compile the SAME `_PROXY_LIB_SRCS`, so they MUST link the same crates —
# they differ ONLY by `crate_features`. Sharing the list here prevents per-instance
# dep drift (which previously left `:mcp_re_proxy_fault` / `:mcp_re_proxy_dev_env`
# pointing at a removed `rustls-pemfile` and missing `zeroize`).
_PROXY_LIB_DEPS = [
    "//mcp-re-core:mcp_re_core",
    "//mcp-re-policy:mcp_re_policy",
    # MCPS-58 (ADR-023 §A1): CRL parsing for the static --client-crl freshness gate.
    "@crates_mcp_re//:der",
    "@crates_mcp_re//:libc",
    "@crates_mcp_re//:rustls",
    "@crates_mcp_re//:rustls-pki-types",
    "@crates_mcp_re//:serde_json",
    "@crates_mcp_re//:thiserror",
    "@crates_mcp_re//:x509-cert",
    "@crates_mcp_re//:x509-parser",
    # MCPS-076 (audit gap G-3): scrub raw-seed temporaries in key_source.
    "@crates_mcp_re//:zeroize",
]

# Issue #4039: the Linux kernel-sandbox crates are TARGET-gated. sandbox_linux.rs
# (in _PROXY_LIB_SRCS) is #[cfg(target_os = "linux")], so EVERY library instance
# needs landlock+seccompiler when built for Linux and NONE of them on Mac — the
# select() resolves to [] off-Linux, keeping the Mac build's closure unchanged.
_PROXY_LINUX_SANDBOX_DEPS = select({
    "@platforms//os:linux": [
        "@crates_mcp_re//:landlock",
        "@crates_mcp_re//:seccompiler",
    ],
    "//conditions:default": [],
})

# Issue #4028/#4030/#4034: deps for the all-external-backends library flavor.
# _PROXY_LIB_DEPS + the optional backend crates (enabled together by the three
# feature flags) + the Linux sandbox select. The default `:mcp_re_proxy` does NOT
# use this — only `:mcp_re_proxy_ext` and its tests do, so the default closure
# stays lean (ADR-MCPS-018).
# The optional backend crates as a PLAIN list (no select) — nt_rust_test's `deps`
# cannot contain a select(), so test targets reuse this and inherit the
# target-gated sandbox crates transitively via the linked `:mcp_re_proxy_ext`.
_PROXY_EXT_CRATES = [
    # #4034 supply-chain fix: the raw PKCS#11 FFI bindings (libloading only, no
    # transitive `paste`). The high-level `cryptoki` crate is replaced by the
    # owned safe wrapper in src/pkcs11_native.rs.
    "@crates_mcp_re//:cryptoki-sys",
    "@crates_mcp_re//:redis",
    "@crates_mcp_re//:ureq",
    # ADR-MCPS-028 §B: SigV4 HMAC-SHA256 + KMS standard-base64 message/signature
    # encoding for the AWS KMS Ed25519 signer (feature aws_kms_keysource).
    "@crates_mcp_re//:hmac",
    "@crates_mcp_re//:base64",
    "@crates_mcp_re//:x509-ocsp",
    # NOTE: der + x509-cert moved to _PROXY_LIB_DEPS — the base crate's static-CRL
    # freshness gate (MCPS-58, tls.rs) now uses them, so ext inherits them via LIB.
    "@crates_mcp_re//:spki",
    "@crates_mcp_re//:sha2",
    # #4063 (MCPS-088): OS CSPRNG for the per-request OCSP nonce.
    "@crates_mcp_re//:getrandom",
    # #4063 (MCPS-088): asn1-rs BitString for the responder-signature verify path
    # (part of the online_ocsp module; linked by every ext flavor).
    "@crates_mcp_re//:asn1-rs",
]

_PROXY_EXT_DEPS = _PROXY_LIB_DEPS + _PROXY_EXT_CRATES + _PROXY_LINUX_SANDBOX_DEPS

# The three Mac-buildable external-backend features, enabled together by the
# `:mcp_re_proxy_ext` flavor and its tests. (Sandbox enforcement is target-gated,
# not feature-gated, so it is NOT in this list.)
_PROXY_EXT_FEATURES = [
    "pkcs11_keysource",
    "redis_replay",
    # #69 (epic #68 v0.4 Axis 1): etcd-backed CP / LINEARIZABLE shared replay store.
    "cpstore_etcd",
    "online_ocsp",
    # ADR-MCPS-028 §B: native AWS KMS Ed25519 response signer.
    "aws_kms_keysource",
    # ADR-MCPS-028 §C: native GCP Cloud KMS Ed25519 response signer.
    "gcp_kms_keysource",
]

# MCPS-029 (folds in MCPS-018 #3807): the production sidecar CLI. Terminates TLS,
# verifies object signatures + (optional) authz + transport binding, forwards to
# an inner MCP server subprocess, signs responses. Blocking; no async runtime.
nt_rust_binary(
    name = "mcp_re_proxy_cli",
    srcs = ["src/main.rs"],
    edition = "2021",
    deps = [
        ":mcp_re_proxy",
        # #220 (ADR-MCPS-048): main.rs uses mcp_re_core directly (e.g.
        # `mcp_re_core::ReplayDurabilityClass`), so it must link mcp-re-core — the Cargo
        # build resolved this transitively/by-manifest but the Bazel binary target
        # never listed it, which is the head of the #220 fail-to-build cascade.
        "//mcp-re-core:mcp_re_core",
        "//mcp-re-policy:mcp_re_policy",
        # MCPS-88 (ADR-MCPS-049 W3): main.rs installs a SIGTERM/SIGINT handler via
        # libc::sigaction for graceful drain, so the binary must link libc (the
        # Cargo build resolves it by manifest; the Bazel binary target must list it).
        "@crates_mcp_re//:libc",
        # MCPRE-116 (ADR-MCPRE-051 §6): main.rs names rustls_pki_types cert/key types
        # in the CRL hot-reload task signature.
        "@crates_mcp_re//:rustls-pki-types",
    ],
)

# Phase 6.1: a plain (MCP-RE-unaware) inner MCP echo server used as the inner
# subprocess in the full-stack CLI smoke test. Echoes back params._meta so the
# test can prove the proxy injected a fresh verified-context block.
nt_rust_binary(
    name = "echo_inner",
    srcs = ["tests/fixtures/echo_inner.rs"],
    edition = "2021",
    deps = [
        "@crates_mcp_re//:serde_json",
    ],
)

# MCPS-015/016: server-side sidecar library. Pure — depends only on the
# verification crate plus serde_json. Transport is layered on by the conformance
# harnesses (MCPS-017); the stdio-first binary entry arrives there too.
nt_rust_library(
    name = "mcp_re_proxy",
    srcs = _PROXY_LIB_SRCS,
    crate_name = "mcp_re_proxy",
    edition = "2021",
    deps = _PROXY_LIB_DEPS + _PROXY_LINUX_SANDBOX_DEPS,
)

# MCPS-079 — a SEPARATE library instance of mcp-re-proxy built WITH the fault
# feature, so the faulted CLIENT verifier is compiled into the fault-injection
# test. The default `:mcp_re_proxy` above is never built with this feature;
# production and the default `bazel test //...` link only the verifying instance.
nt_rust_library(
    name = "mcp_re_proxy_fault",
    srcs = _PROXY_LIB_SRCS,
    crate_features = ["fault_accept_any_client"],
    crate_name = "mcp_re_proxy",
    edition = "2021",
    deps = _PROXY_LIB_DEPS + _PROXY_LINUX_SANDBOX_DEPS,
)

# MCPS-079 — fault injection ("test of the tests"), the symmetric mirror of
# mcp-re-transport's fault_injection_test. Runs on EVERY `bazel test //...` (NOT
# `manual`) so the control can never silently rot. It DELIBERATELY breaks the
# CLIENT-authentication control by compiling both the library dep AND this test
# with `--features fault_accept_any_client`, then drives the SAME scenarios as
# tls_test's T1 (missing client cert) and T2 (untrusted client cert) and asserts
# the OPPOSITE outcome — the handshake now COMPLETES and the inner handler is
# reached — proving those rejection guards are load-bearing. The feature is off by
# default and only this separate `:mcp_re_proxy_fault` instance turns it on; the
# production `:mcp_re_proxy` / CLI are never built with it.
nt_rust_test(
    name = "fault_injection_test",
    srcs = ["tests/fault_injection_test.rs"],
    auto_cargo_toml = False,
    bazel_build_cfg = False,
    crate_features = ["fault_accept_any_client"],
    edition = "2021",
    deps = [
        ":mcp_re_proxy_fault",  # keep
        "@crates_mcp_re//:rcgen",
        "@crates_mcp_re//:rustls",
        "@crates_mcp_re//:rustls-pki-types",
    ],
)

# MCPS-024: in-crate unit tests (transport-binding abstraction: identity, provider
# seam, ExactMatch/Mapped binding policies). MCPS-076 adds the default-build
# fail-closed proof for build_key_source(KeySourceKind::Env).
nt_rust_test(
    name = "proxy_unit_test",
    crate = ":mcp_re_proxy",
    auto_cargo_toml = False,
    bazel_build_cfg = False,
    edition = "2021",
    deps = [
        "//mcp-re-core:mcp_re_core",
        "//mcp-re-policy:mcp_re_policy",
        "@crates_mcp_re//:libc",
        "@crates_mcp_re//:rcgen",
        "@crates_mcp_re//:rustls-pki-types",
        "@crates_mcp_re//:serde_json",
        "@crates_mcp_re//:zeroize",
    ],
)

# MCPS-063: the proxy fronts a LONG-LIVED inner MCP server. Spawns the REAL
# mcp-re-demo-server binary as the persistent inner, does the initialize handshake
# once, and forwards N verified host-signed requests over the SAME process —
# asserting one inner_spawned and N inner_request_forwarded, plus fail-closed on
# inner crash / malformed line / handshake failure. The demo binary is delivered
# via runfiles (data dep) and resolved via $(rlocationpath ...) — no cargo.
nt_rust_test(
    name = "persistent_inner_test",
    srcs = ["tests/persistent_inner_test.rs"],
    auto_cargo_toml = False,
    bazel_build_cfg = False,
    data = [
        "//mcp-re-demo-server:mcp_re_demo_server_bin",
    ],
    edition = "2021",
    env = {
        "DEMO_SERVER_BIN": "$(rlocationpath //mcp-re-demo-server:mcp_re_demo_server_bin)",
    },
    deps = [
        "//mcp-re-test-paths:mcp_re_test_paths",  # #220 (ADR-048): source imports this crate
        ":mcp_re_proxy",
        "//mcp-re-core:mcp_re_core",
        "//mcp-re-host:mcp_re_host",
        "@crates_mcp_re//:serde_json",
    ],
)

# MCPS-064: per-request strip/inject over a LONG-LIVED inner session. Fronts the
# REAL mcp-re-demo-server binary as the persistent inner behind a real Proxy, drives
# N (>= 3) distinct host-signed requests over the SINGLE session, and asserts the
# verified-context strip+inject fires FRESH on every request — a forged caller
# .verified is stripped and a sidecar-owned context (verifier = this proxy, signer
# = the verified inbound signer) is injected each time — with one inner_spawned, N
# inner_request_forwarded, and a clean teardown. The demo binary is delivered via
# runfiles (data dep) and resolved via $(rlocationpath ...) — no cargo.
nt_rust_test(
    name = "persistent_session_test",
    srcs = ["tests/persistent_session_test.rs"],
    auto_cargo_toml = False,
    bazel_build_cfg = False,
    data = [
        "//mcp-re-demo-server:mcp_re_demo_server_bin",
    ],
    edition = "2021",
    env = {
        "DEMO_SERVER_BIN": "$(rlocationpath //mcp-re-demo-server:mcp_re_demo_server_bin)",
    },
    deps = [
        "//mcp-re-test-paths:mcp_re_test_paths",  # #220 (ADR-048): source imports this crate
        ":mcp_re_proxy",
        "//mcp-re-core:mcp_re_core",
        "//mcp-re-host:mcp_re_host",
        "@crates_mcp_re//:serde_json",
    ],
)

# MCPS-065: Phase-5 scopes (public/protected/admin) over the LONG-LIVED
# mcp-re-demo-server. A real Proxy with policy enforcement fronts the single
# PersistentSubprocessInner: the public `echo` baseline grant succeeds, the
# protected `list_items` succeeds with its matching grant and is denied without
# one, and the admin `reset_items` is denied (no grant covers it). Each denial is
# proven by zero added `inner_request_forwarded` AND the persistent session
# staying alive (a later authorized call on the SAME session still succeeds). The
# demo binary is delivered via runfiles (data dep) and resolved via
# $(rlocationpath ...) — no cargo.
nt_rust_test(
    name = "persistent_scope_test",
    srcs = ["tests/persistent_scope_test.rs"],
    auto_cargo_toml = False,
    bazel_build_cfg = False,
    data = [
        "//mcp-re-demo-server:mcp_re_demo_server_bin",
    ],
    edition = "2021",
    env = {
        "DEMO_SERVER_BIN": "$(rlocationpath //mcp-re-demo-server:mcp_re_demo_server_bin)",
    },
    deps = [
        "//mcp-re-test-paths:mcp_re_test_paths",  # #220 (ADR-048): source imports this crate
        ":mcp_re_proxy",
        "//mcp-re-core:mcp_re_core",
        "//mcp-re-host:mcp_re_host",
        "//mcp-re-policy:mcp_re_policy",
        "@crates_mcp_re//:serde_json",
    ],
)

# Verify-before-dispatch + verified-context propagation. The host signs the
# requests (real client/server pairing); the inner server records whether it was
# reached so the fail-closed guarantee is observable.
nt_rust_test(
    name = "proxy_test",
    srcs = ["tests/proxy_test.rs"],
    auto_cargo_toml = False,
    bazel_build_cfg = False,
    edition = "2021",
    deps = [
        ":mcp_re_proxy",
        "//mcp-re-core:mcp_re_core",
        "//mcp-re-host:mcp_re_host_test_fixtures",  # keep
        "//mcp-re-policy:mcp_re_policy",
        "@crates_mcp_re//:serde_json",
    ],
)

# ADR-MCPS-039 (D1): the expected-version posture is wired into the sidecar. The
# default admits a host-signed draft-01 request end-to-end; a Draft02Only proxy
# refuses the same request as mcp-re.downgrade_forbidden before dispatch.
nt_rust_test(
    name = "proxy_version_policy_test",
    srcs = ["tests/proxy_version_policy_test.rs"],
    auto_cargo_toml = False,
    bazel_build_cfg = False,
    edition = "2021",
    deps = [
        ":mcp_re_proxy",
        "//mcp-re-core:mcp_re_core",
        "//mcp-re-host:mcp_re_host",
        "@crates_mcp_re//:serde_json",
    ],
)

# ADR-MCPS-045 (Phase 3b.5): the sidecar SERVES draft-02 end to end. A draft-02
# request (signed by the client-core seam) forwards with a draft-02 verified
# context (authorization_binding, no authorization_hash placeholder) and the
# signed response carries the protected version + canonicalization_id and binds
# to the request hash; the draft-01 (host-signed) serving path is unchanged.
nt_rust_test(
    name = "proxy_draft02_serving_test",
    srcs = ["tests/proxy_draft02_serving_test.rs"],
    auto_cargo_toml = False,
    bazel_build_cfg = False,
    edition = "2021",
    deps = [
        ":mcp_re_proxy",
        "//mcp-re-client-core:mcp_re_client_core",
        "//mcp-re-core:mcp_re_core",
        "//mcp-re-host:mcp_re_host",
        "@crates_mcp_re//:serde_json",
    ],
)

# MCPS-027: KeySource (File + Env) — signing key + TLS cert/key + client-CA.
nt_rust_test(
    name = "key_source_test",
    srcs = ["tests/key_source_test.rs"],
    auto_cargo_toml = False,
    bazel_build_cfg = False,
    edition = "2021",
    deps = [
        ":mcp_re_proxy",
        "//mcp-re-core:mcp_re_core",
        "@crates_mcp_re//:rcgen",
        "@crates_mcp_re//:rustls-pki-types",
    ],
)

# MCPS-076 (audit gap G-3): a SEPARATE library instance of mcp-re-proxy built WITH
# the dev-only `dev_env_key_source` feature, so `EnvKeySource` (and the dev arm of
# build_key_source) is compiled into the dev test below. The default `:mcp_re_proxy`
# ADR-MCPRE-051 Phase 2 (§1): the async serving path (tokio + tokio-rustls + hyper
# keep-alive/H2). The tokio/hyper stack (declared non-optional in Cargo.toml for
# crate_universe visibility) is linked ONLY by this flavor + its test — the default
# `:mcp_re_proxy` closure stays the blocking std::net path (ADR-MCPS-018 lean-sync
# firewall). Built on every `bazel test //...` so the opt-in path can never rot.
_PROXY_ASYNC_CRATES = [
    "@crates_mcp_re//:tokio",
    "@crates_mcp_re//:tokio-rustls",
    "@crates_mcp_re//:hyper",
    "@crates_mcp_re//:hyper-util",
    "@crates_mcp_re//:http-body-util",
    "@crates_mcp_re//:bytes",
]

nt_rust_library(
    name = "mcp_re_proxy_async",
    srcs = _PROXY_LIB_SRCS,
    crate_features = ["async_serve"],
    crate_name = "mcp_re_proxy",
    edition = "2021",
    deps = _PROXY_LIB_DEPS + _PROXY_LINUX_SANDBOX_DEPS + _PROXY_ASYNC_CRATES,
)

# MCPRE-112 (ADR-MCPRE-051 §1): async serving-path PARITY suite — reproduces the
# blocking loop's mTLS fail-closed behaviors + identity extraction on the async
# transport, plus keep-alive + concurrency. Drives `async_serve::serve` on a tokio
# runtime in a background thread and hammers it with blocking rustls mTLS clients.
# Built + run on every `bazel test //...` so the opt-in path can never rot.
nt_rust_test(
    name = "async_serve_parity_test",
    srcs = ["tests/async_serve_parity_test.rs"],
    auto_cargo_toml = False,
    bazel_build_cfg = False,
    crate_features = ["async_serve"],
    edition = "2021",
    deps = [
        ":mcp_re_proxy_async",  # keep
        "@crates_mcp_re//:rcgen",
        "@crates_mcp_re//:rustls",
        "@crates_mcp_re//:rustls-pki-types",
        "@crates_mcp_re//:tokio",
    ],
)

# MCPRE-114 (ADR-MCPRE-051 §1, Phase 2): per-core ADMISSION-control suite — proves
# the async path enforces a per-core in-flight ceiling with fail-closed 503
# backpressure (never unbounded queuing) + the fleet-global→per-core derivation.
# Drives serve() on a multi-thread runtime to force concurrent in-flight requests.
nt_rust_test(
    name = "async_admission_test",
    srcs = ["tests/async_admission_test.rs"],
    auto_cargo_toml = False,
    bazel_build_cfg = False,
    crate_features = ["async_serve"],
    edition = "2021",
    deps = [
        ":mcp_re_proxy_async",  # keep
        "@crates_mcp_re//:rcgen",
        "@crates_mcp_re//:rustls",
        "@crates_mcp_re//:rustls-pki-types",
        "@crates_mcp_re//:tokio",
    ],
)

# MCPRE-115 (ADR-MCPRE-051 §6, Phase 2): bounded graceful DRAIN suite — proves an
# in-flight request drains cleanly (zero abandoned) on shutdown within the grace
# window, idle + saturated drains return within bound, and a stuck request cannot
# delay exit past the grace (bounded exit). Drives serve() on a multi-thread runtime.
nt_rust_test(
    name = "async_drain_test",
    srcs = ["tests/async_drain_test.rs"],
    auto_cargo_toml = False,
    bazel_build_cfg = False,
    crate_features = ["async_serve"],
    edition = "2021",
    deps = [
        ":mcp_re_proxy_async",  # keep
        "@crates_mcp_re//:rcgen",
        "@crates_mcp_re//:rustls",
        "@crates_mcp_re//:rustls-pki-types",
        "@crates_mcp_re//:tokio",
    ],
)

# MCPRE-117 (ADR-MCPRE-051 §4, Phase 2): async replay tier SEAM suite — proves the
# per-core L1 fast-rejects known replays without ever manufacturing a Fresh
# (L1-never-Fresh), L1 eviction is safe, an L2 outage fails closed + recovers, and
# cross-core many-tiers-over-one-L2 admit EXACTLY ONE Fresh under concurrency. On the
# in-memory reference backend; async Redis/etcd live cross-replica is the infra lane.
nt_rust_test(
    name = "async_replay_test",
    srcs = ["tests/async_replay_test.rs"],
    auto_cargo_toml = False,
    bazel_build_cfg = False,
    crate_features = ["async_serve"],
    edition = "2021",
    deps = [
        ":mcp_re_proxy_async",  # keep
        "//mcp-re-core:mcp_re_core",
        "@crates_mcp_re//:tokio",
    ],
)

# MCPRE-113 (ADR-MCPRE-051 §1, Phase 2): per-core serving FLEET suite — proves N
# independent per-core tokio runtimes, each with its own SO_REUSEPORT listener, serve
# the full mTLS pipeline correctly with a configurable core count and a clean
# shutdown. Built + run on every `bazel test //...`; near-linear throughput scaling is
# the load-harness/SLO lane (MCPRE-110/123), not this deterministic suite.
nt_rust_test(
    name = "async_fleet_test",
    srcs = ["tests/async_fleet_test.rs"],
    auto_cargo_toml = False,
    bazel_build_cfg = False,
    crate_features = ["async_serve"],
    edition = "2021",
    deps = [
        ":mcp_re_proxy_async",  # keep
        "@crates_mcp_re//:rcgen",
        "@crates_mcp_re//:rustls",
        "@crates_mcp_re//:rustls-pki-types",
        "@crates_mcp_re//:tokio",
    ],
)

# above is NEVER built with this feature; production and the production CLI link
# only the env-LESS instance. This instance is built on every `bazel test //...`
# (NOT `manual`) so it can never silently fail to compile.
nt_rust_library(
    name = "mcp_re_proxy_dev_env",
    srcs = _PROXY_LIB_SRCS,
    crate_features = ["dev_env_key_source"],
    crate_name = "mcp_re_proxy",
    edition = "2021",
    deps = _PROXY_LIB_DEPS + _PROXY_LINUX_SANDBOX_DEPS,
)

# MCPS-076 (audit gap G-3): the dev-only EnvKeySource + secret-hygiene proofs. Built
# WITH the `dev_env_key_source` feature (so EnvKeySource exists) and linked against
# the matching `:mcp_re_proxy_dev_env` instance. Runs on EVERY `bazel test //...`
# (NOT `manual`) so the dev-feature path can never silently rot.
# Proves: the env source signs + REMOVES the env var after read; KeyError never
# leaks the seed; and the canonical zeroize-on-drop heap-scrub check.
nt_rust_test(
    name = "dev_env_key_source_test",
    srcs = ["tests/dev_env_key_source_test.rs"],
    auto_cargo_toml = False,
    bazel_build_cfg = False,
    crate_features = ["dev_env_key_source"],
    edition = "2021",
    deps = [
        ":mcp_re_proxy_dev_env",  # keep
        "//mcp-re-core:mcp_re_core",
        "@crates_mcp_re//:zeroize",
    ],
)

# MCPS-026: transport binding wired into the proxy serving path — bound/mismatch/
# absent identity, and opt-in (no-binding) parity.
nt_rust_test(
    name = "proxy_transport_test",
    srcs = ["tests/proxy_transport_test.rs"],
    auto_cargo_toml = False,
    bazel_build_cfg = False,
    edition = "2021",
    deps = [
        ":mcp_re_proxy",
        "//mcp-re-core:mcp_re_core",
        "//mcp-re-host:mcp_re_host",
        "@crates_mcp_re//:serde_json",
    ],
)

# Issue #71 (ADR-MCPS-023 Tier 3): LB-signed, request-bound ingress assertion wired
# into the proxy serving path. Serve-level acceptance over the SAME
# Proxy::handle_with_transport entry point the production loop calls — a valid
# request-bound assertion reaches the inner; a cross-request / tampered / unknown-key
# / stale / missing-header assertion is rejected BEFORE dispatch; and a tampered
# object signature still fails first (object verify before transport binding).
nt_rust_test(
    name = "proxy_lb_assertion_test",
    srcs = ["tests/proxy_lb_assertion_test.rs"],
    auto_cargo_toml = False,
    bazel_build_cfg = False,
    edition = "2021",
    deps = [
        ":mcp_re_proxy",
        "//mcp-re-core:mcp_re_core",
        "//mcp-re-host:mcp_re_host",
        "@crates_mcp_re//:serde_json",
    ],
)

# ADR-MCPS-022: per-node key custody — authorized key-set admission verified
# through Core verify_response (per-node accept, unknown/revoked reject, shared
# mode, algorithm boundary, 021+022 composition).
nt_rust_test(
    name = "keyset_admission_test",
    srcs = ["tests/keyset_admission_test.rs"],
    auto_cargo_toml = False,
    bazel_build_cfg = False,
    edition = "2021",
    deps = [
        ":mcp_re_proxy",
        "//mcp-re-core:mcp_re_core",
        "@crates_mcp_re//:serde_json",
    ],
)

# MCPS-025: RustlsDirectProvider — identity extraction (URI/DNS/CN priority) +
# a full blocking mTLS round-trip (certs minted in-process via rcgen).
nt_rust_test(
    name = "tls_test",
    srcs = ["tests/tls_test.rs"],
    auto_cargo_toml = False,
    bazel_build_cfg = False,
    edition = "2021",
    deps = [
        ":mcp_re_proxy",
        # ADR-MCPS-028 §G: the delegated-TLS handshake test signs with a local
        # mcp-re-core Ed25519 key standing in for the device/KMS.
        "//mcp-re-core:mcp_re_core",
        "@crates_mcp_re//:rcgen",
        "@crates_mcp_re//:rustls",
        "@crates_mcp_re//:rustls-pki-types",
        "@crates_mcp_re//:serde_json",
    ],
)

# MCPS-023: opt-in policy enforcement — deny-before-dispatch (fail closed),
# allow-flows-through, and opt-in (no-evaluator) parity.
nt_rust_test(
    name = "proxy_policy_test",
    srcs = ["tests/proxy_policy_test.rs"],
    auto_cargo_toml = False,
    bazel_build_cfg = False,
    edition = "2021",
    deps = [
        ":mcp_re_proxy",
        "//mcp-re-core:mcp_re_core",
        "//mcp-re-host:mcp_re_host",
        "//mcp-re-policy:mcp_re_policy",
        "@crates_mcp_re//:serde_json",
    ],
)

# MCPS-080 (audit §11 G-7): NEGATIVE secret-in-logs test. Drives a known
# sentinel secret (signing seed, authorization artifact, request argument)
# through every proxy error / denial / log path and asserts the sentinel never
# appears in captured proxy logs/stderr, the returned JSON-RPC error object, or
# (for seed/artifact) the bytes forwarded to the inner server.
nt_rust_test(
    name = "secret_in_logs_test",
    srcs = ["tests/secret_in_logs_test.rs"],
    auto_cargo_toml = False,
    bazel_build_cfg = False,
    edition = "2021",
    deps = [
        ":mcp_re_proxy",
        "//mcp-re-core:mcp_re_core",
        "//mcp-re-host:mcp_re_host",
        "//mcp-re-policy:mcp_re_policy",
        "@crates_mcp_re//:serde_json",
    ],
)

# Phase 6.1: full-stack CI smoke test for the mcp_re_proxy_cli EXECUTABLE — spawns
# the real CLI process + a real inner echo subprocess, drives real mTLS with real
# client certs, and asserts the security matrix end to end: verified-context
# injection + signed response, plus rejection of no-cert / untrusted-cert /
# tampered-signature / wrong-binding. Both binaries delivered via runfiles.
nt_rust_test(
    name = "full_stack_test",
    srcs = ["tests/full_stack_test.rs"],
    auto_cargo_toml = False,
    bazel_build_cfg = False,
    data = [
        ":echo_inner",
        ":mcp_re_proxy_cli",
    ],
    edition = "2021",
    env = {
        "MCP_RE_ECHO_INNER": "$(rlocationpath :echo_inner)",
        "MCP_RE_PROXY_CLI": "$(rlocationpath :mcp_re_proxy_cli)",
    },
    deps = [
        "//mcp-re-test-paths:mcp_re_test_paths",  # #220 (ADR-048): source imports this crate
        ":mcp_re_proxy",
        "//mcp-re-core:mcp_re_core",
        "//mcp-re-host:mcp_re_host",
        "@crates_mcp_re//:rcgen",
        "@crates_mcp_re//:rustls",
        "@crates_mcp_re//:rustls-pki-types",
        "@crates_mcp_re//:serde_json",
    ],
)

# ===========================================================================
# Phase 7 external backends (#4028 Redis, #4030 OCSP, #4034 PKCS#11, #4039
# Linux sandbox). A SINGLE library flavor builds all three Mac-buildable
# optional features together so the adapters are Bazel-built on every run; the
# default `:mcp_re_proxy` links none of them. The Linux sandbox enforcement is
# target-gated (compiled into ALL flavors on Linux via _PROXY_LINUX_SANDBOX_DEPS,
# excluded on Mac), so it needs no feature flavor.
# ===========================================================================
nt_rust_library(
    name = "mcp_re_proxy_ext",
    srcs = _PROXY_LIB_SRCS,
    crate_features = _PROXY_EXT_FEATURES,
    crate_name = "mcp_re_proxy",
    edition = "2021",
    deps = _PROXY_EXT_DEPS,
)

# Inline #[cfg(feature = ...)] unit tests for the external backends (ocsp.rs
# network-free codec/policy tests + the RFC 6960 §3.2 responder-SIGNATURE
# acceptance tests, cli.rs feature-gated flag tests, redis/pkcs11 inline tests).
# Built WITH the production external-backend features against the ext flavor so
# they actually compile + run on every `bazel test //...` (Mac included).
#
# #4063 (MCPS-088, closes #4030): the OCSP responder-SIGNATURE verifier
# (x509-parser/verify, the ring-backed algorithm-agnostic RSA+ECDSA verifier) is
# part of the `online_ocsp` module itself — `x509-parser/verify` is enabled
# unconditionally at the workspace level — so the SHIPPING `online_ocsp` build
# performs the real §3.2 trust chain. These acceptance tests (real signed Good →
# ADMIT; forged/wrong-key/unsigned → DENY) therefore exercise the SAME production
# code path the `online_ocsp` build ships, NOT a separate flavor. The in-tree
# Ed25519 signer (ed25519-dalek) only mints the signed fixtures.
nt_rust_test(
    name = "proxy_ext_unit_test",
    crate = ":mcp_re_proxy_ext",  # keep
    auto_cargo_toml = False,
    bazel_build_cfg = False,
    crate_features = _PROXY_EXT_FEATURES,
    edition = "2021",
    deps = _PROXY_LIB_DEPS + _PROXY_EXT_CRATES + [
        "@crates_mcp_re//:rcgen",
        # #4063 (MCPS-088): the in-tree Ed25519 signer used to mint a genuinely
        # signed OCSP response fixture for the admit/forge acceptance tests.
        "@crates_mcp_re//:ed25519-dalek",
    ],
)

# #4028: cross-node replay rejection over a SHARED Redis. Self-skips (prints +
# passes) unless MCP_RE_TEST_REDIS_URL is set, so it is green without a live Redis
# yet proves multi-node safety when one is provided (Mac: `brew install redis`).
nt_rust_test(
    name = "redis_replay_e2e_test",
    srcs = ["tests/redis_replay_e2e_test.rs"],
    auto_cargo_toml = False,
    bazel_build_cfg = False,
    crate_features = _PROXY_EXT_FEATURES,
    edition = "2021",
    env_inherit = [
        "MCP_RE_TEST_REDIS_URL",
        # CI opt-in: when set, a missing-infra SKIP HARD-FAILS instead of passing.
        "MCP_RE_REQUIRE_LIVE_INFRA",
    ],
    deps = [
        ":mcp_re_proxy_ext",  # keep
        "//mcp-re-core:mcp_re_core",
        "@crates_mcp_re//:serde_json",
        # MCPS-090: the live PTTL test probes PTTL on the exact key the cache
        # inserted, to confirm the bounded-window TTL (not the now=0 epoch TTL).
        "@crates_mcp_re//:redis",
    ],
)

# MCPS-80/81 (ADR-MCPS-049 W1, proof a): fleet replay coherence — two serving
# Proxy replicas over one shared Redis; skip-when-absent like redis_replay_e2e.
nt_rust_test(
    name = "fleet_replay_e2e_test",
    srcs = ["tests/fleet_replay_e2e_test.rs"],
    auto_cargo_toml = False,
    bazel_build_cfg = False,
    crate_features = _PROXY_EXT_FEATURES,
    edition = "2021",
    env_inherit = [
        "MCP_RE_TEST_REDIS_URL",
        "MCP_RE_REQUIRE_LIVE_INFRA",
    ],
    deps = [
        ":mcp_re_proxy_ext",  # keep
        "//mcp-re-core:mcp_re_core",
        "//mcp-re-host:mcp_re_host_test_fixtures",  # keep
        "@crates_mcp_re//:serde_json",
    ],
)

# MCPRE-108 (ADR-MCPRE-051 §7): concurrent-TLS-client load harness driving the
# REAL listener (spawns the mcp-re-proxy CLI + echo inner, hammers it with many
# concurrent rustls mTLS clients). The full benchmark is #[ignore] (the ADR §7
# manual/dispatch lane, scaled by MCP_RE_LOADGEN_* env); an always-on smoke test
# self-verifies the harness at tiny scale on every battery run. Same data/env
# wiring as full_stack_test.
nt_rust_test(
    name = "tls_load_harness_bench",
    srcs = ["tests/tls_load_harness_bench.rs"],
    auto_cargo_toml = False,
    bazel_build_cfg = False,
    data = [
        ":echo_inner",
        ":mcp_re_proxy_cli",
    ],
    edition = "2021",
    env = {
        "MCP_RE_ECHO_INNER": "$(rlocationpath :echo_inner)",
        "MCP_RE_PROXY_CLI": "$(rlocationpath :mcp_re_proxy_cli)",
    },
    env_inherit = [
        "MCP_RE_LOADGEN_CONCURRENCY",
        "MCP_RE_LOADGEN_REQUESTS",
        "MCP_RE_LOADGEN_MODE",
        "MCP_RE_LOADGEN_HW_CLASS",
        "MCP_RE_LOADGEN_CORES",
        "MCP_RE_LOADGEN_OUT",
    ],
    deps = [
        "//mcp-re-test-paths:mcp_re_test_paths",  # #220 (ADR-048): source imports this crate
        ":mcp_re_proxy",
        "//mcp-re-core:mcp_re_core",
        "//mcp-re-host:mcp_re_host",
        "@crates_mcp_re//:rcgen",
        "@crates_mcp_re//:rustls",
        "@crates_mcp_re//:rustls-pki-types",
        "@crates_mcp_re//:serde_json",
    ],
)

# MCPRE-109 (ADR-MCPRE-051 §4): replay race harness — the authoritative replay
# tier admits EXACTLY ONE Fresh under N-way concurrency (cross-core + cross-
# replica), and ZERO Fresh when the store is unavailable (fail closed). The
# in-memory reference tier is raced on every `bazel test //...` (no live infra);
# the Redis/etcd lanes race the same harness on the live store when their feature
# is compiled and endpoint env var is set (skip-when-absent; hard-fail under
# MCP_RE_REQUIRE_LIVE_INFRA). Built against the ext crate so the feature-gated
# Redis/etcd store exports are present.
nt_rust_test(
    name = "replay_race_harness_test",
    srcs = ["tests/replay_race_harness_test.rs"],
    auto_cargo_toml = False,
    bazel_build_cfg = False,
    crate_features = _PROXY_EXT_FEATURES,
    edition = "2021",
    env_inherit = [
        "MCP_RE_TEST_REDIS_URL",
        "MCP_RE_TEST_ETCD_URL",
        "MCP_RE_REQUIRE_LIVE_INFRA",
    ],
    deps = [
        ":mcp_re_proxy_ext",  # keep
        "//mcp-re-core:mcp_re_core",
    ],
)

# MCPS-82 (#273, ADR-MCPS-049 W1, proof c): an MRT continuation survives a mid-
# continuation replica switch — two INDEPENDENT serving Proxy replicas, leg 1 to A
# and the signed continuation leg to a fresh B. Replica-independence needs no shared
# store (the continuation rides the signed preimage), so this runs on every
# `bazel test //...` with no live infra — unlike the Redis-gated replay/revocation
# proofs. Signs via the real mcp-re-client-core draft-02 seam.
nt_rust_test(
    name = "fleet_mrt_replica_switch_e2e_test",
    srcs = ["tests/fleet_mrt_replica_switch_e2e_test.rs"],
    auto_cargo_toml = False,
    bazel_build_cfg = False,
    edition = "2021",
    deps = [
        ":mcp_re_proxy",
        "//mcp-re-client-core:mcp_re_client_core",
        "//mcp-re-core:mcp_re_core",
        "@crates_mcp_re//:serde_json",
    ],
)

# MCPS-89 (ADR-MCPS-049 W3): fleet PEP throughput/added-latency benchmark harness
# (#[ignore], run explicitly). Same feature/skip gating as the fleet replay test.
nt_rust_test(
    name = "fleet_throughput_bench",
    srcs = ["tests/fleet_throughput_bench.rs"],
    auto_cargo_toml = False,
    bazel_build_cfg = False,
    crate_features = _PROXY_EXT_FEATURES,
    edition = "2021",
    env_inherit = [
        "MCP_RE_TEST_REDIS_URL",
        "MCP_RE_REQUIRE_LIVE_INFRA",
        "MCP_RE_BENCH_REQUESTS",
        "MCP_RE_BENCH_REPLICAS",
    ],
    deps = [
        ":mcp_re_proxy_ext",  # keep
        "//mcp-re-core:mcp_re_core",
        "//mcp-re-host:mcp_re_host_test_fixtures",  # keep
        "@crates_mcp_re//:serde_json",
    ],
)

# MCPS-84 (ADR-MCPS-049 W2): live Redis trust-epoch source — an INCR on another
# connection surfaces as FlushAll.
nt_rust_test(
    name = "redis_trust_epoch_e2e_test",
    srcs = ["tests/redis_trust_epoch_e2e_test.rs"],
    auto_cargo_toml = False,
    bazel_build_cfg = False,
    crate_features = _PROXY_EXT_FEATURES,
    edition = "2021",
    env_inherit = [
        "MCP_RE_TEST_REDIS_URL",
        "MCP_RE_REQUIRE_LIVE_INFRA",
    ],
    deps = [
        ":mcp_re_proxy_ext",  # keep
        "@crates_mcp_re//:redis",
    ],
)

# MCPS-86 (ADR-MCPS-049 W1, proof b): fleet trust-revocation coherence — a
# revocation takes effect on a sibling replica when the trust epoch advances.
nt_rust_test(
    name = "fleet_trust_epoch_e2e_test",
    srcs = ["tests/fleet_trust_epoch_e2e_test.rs"],
    auto_cargo_toml = False,
    bazel_build_cfg = False,
    crate_features = _PROXY_EXT_FEATURES,
    edition = "2021",
    env_inherit = [
        "MCP_RE_TEST_REDIS_URL",
        "MCP_RE_REQUIRE_LIVE_INFRA",
    ],
    deps = [
        ":mcp_re_proxy_ext",  # keep
        "//mcp-re-core:mcp_re_core",
        "//mcp-re-host:mcp_re_host_test_fixtures",  # keep
        "@crates_mcp_re//:redis",
        "@crates_mcp_re//:serde_json",
    ],
)

# #69 (epic #68 v0.4 Axis 1): cross-node replay rejection + bounded lease TTL over
# a SHARED etcd (the CP / LINEARIZABLE backend). Self-skips (prints + passes)
# unless MCP_RE_TEST_ETCD_URL is set, so it is green without a live etcd yet proves
# multi-node linearizable replay safety when one is provided
# (Mac: `brew install etcd`, then run with --enable-v2=false v3 gateway on :2379).
nt_rust_test(
    name = "cpstore_etcd_e2e_test",
    srcs = ["tests/cpstore_etcd_e2e_test.rs"],
    auto_cargo_toml = False,
    bazel_build_cfg = False,
    crate_features = _PROXY_EXT_FEATURES,
    edition = "2021",
    env_inherit = [
        "MCP_RE_TEST_ETCD_URL",
        # CI opt-in: when set, a missing-infra SKIP HARD-FAILS instead of passing.
        "MCP_RE_REQUIRE_LIVE_INFRA",
    ],
    deps = [
        ":mcp_re_proxy_ext",  # keep
        "//mcp-re-core:mcp_re_core",
        "@crates_mcp_re//:serde_json",
        # The live TTL probe base64-encodes the key + drives the etcd v3 gateway.
        "@crates_mcp_re//:base64",
        "@crates_mcp_re//:ureq",
    ],
)

# #4034: PKCS#11 sign+verify against a HERMETIC in-tree mock provider
# (tests/mock-pkcs11). Under `cargo` the test builds + loads the mock and RUNS for
# real; under the Bazel sandbox (no `cargo`) it self-skips. The mock is not a Bazel
# target — it is built on demand by the test — so no extra srcs/deps are wired here.
nt_rust_test(
    name = "pkcs11_keysource_e2e_test",
    srcs = ["tests/pkcs11_keysource_e2e_test.rs"],
    auto_cargo_toml = False,
    bazel_build_cfg = False,
    crate_features = _PROXY_EXT_FEATURES,
    edition = "2021",
    env_inherit = [
        # CI opt-in: when set, a missing-mock SKIP HARD-FAILS instead of passing.
        "MCP_RE_REQUIRE_LIVE_INFRA",
    ],
    deps = [
        ":mcp_re_proxy_ext",  # keep
        "//mcp-re-core:mcp_re_core",
        # #220 (ADR-048): the e2e mints a CA/leaf + rustls config to drive a real
        # mTLS handshake against the PKCS#11 signer; these test deps match Cargo.toml.
        "@crates_mcp_re//:rcgen",
        "@crates_mcp_re//:rustls",
        "@crates_mcp_re//:rustls-pki-types",
        "@crates_mcp_re//:serde_json",
    ],
)

# #4030: online OCSP Good/Revoked against an `openssl ocsp` test responder.
# Self-skips unless MCP_RE_TEST_OCSP_RESPONDER_URL (+ DER paths) is set.
nt_rust_test(
    name = "ocsp_e2e_test",
    srcs = ["tests/ocsp_e2e_test.rs"],
    auto_cargo_toml = False,
    bazel_build_cfg = False,
    crate_features = _PROXY_EXT_FEATURES,
    edition = "2021",
    env_inherit = [
        "MCP_RE_TEST_OCSP_RESPONDER_URL",
        "MCP_RE_TEST_OCSP_ISSUER_DER",
        "MCP_RE_TEST_OCSP_GOOD_DER",
        "MCP_RE_TEST_OCSP_REVOKED_DER",
        # CI opt-in: when set, a missing-infra SKIP HARD-FAILS instead of passing.
        "MCP_RE_REQUIRE_LIVE_INFRA",
    ],
    deps = [
        ":mcp_re_proxy_ext",  # keep
        "//mcp-re-core:mcp_re_core",
        "@crates_mcp_re//:serde_json",
        "@crates_mcp_re//:rcgen",
    ],
)

# #4039: Landlock+seccomp ENFORCEMENT effect tests. The file is
# #![cfg(target_os = "linux")], so on Mac it compiles to an empty (passing) test
# crate and the real fs/network-denial assertions run only on the Linux runner.
nt_rust_test(
    name = "sandbox_linux_e2e_test",
    srcs = ["tests/sandbox_linux_e2e_test.rs"],
    auto_cargo_toml = False,
    bazel_build_cfg = False,
    edition = "2021",
    deps = [
        ":mcp_re_proxy",
        "//mcp-re-core:mcp_re_core",
        "@crates_mcp_re//:serde_json",
    ],
)

# ===========================================================================
# Phase 1 OCI packaging of the PRODUCTION proxy artifact (mcp_re_proxy_ext).
#
# The lean `:mcp_re_proxy_cli` binary (src/main.rs + the default `:mcp_re_proxy`
# library) is unchanged. This is the SAME main.rs compiled against the
# external-backends `:mcp_re_proxy_ext` library flavor (the three Mac-buildable
# optional features), then cross-compiled to linux/amd64 and packaged into a
# single-arch distroless image. linux/amd64 ONLY for v1 (no arm64, no
# oci_image_index).
# ===========================================================================

# The production binary: same src/main.rs the lean CLI uses, but linked against
# the ext library flavor and built with the external-backend features (mirrors
# `:mcp_re_proxy_cli`, swapping `:mcp_re_proxy` -> `:mcp_re_proxy_ext` and adding the
# ext features).
nt_rust_binary(
    name = "mcp_re_proxy_ext_bin",
    srcs = ["src/main.rs"],
    crate_features = _PROXY_EXT_FEATURES,
    edition = "2021",
    # _PROXY_EXT_DEPS already includes //mcp-re-policy:mcp_re_policy (via
    # _PROXY_LIB_DEPS), so it is NOT relisted here — the lean CLI lists it
    # explicitly only because its lean dep set (`:mcp_re_proxy`) does not.
    deps = [":mcp_re_proxy_ext"] + _PROXY_EXT_DEPS,  # keep
)

# Cross-compile the ext binary to the linux/amd64 image platform (from darwin).
platform_transition_filegroup(
    name = "mcp_re_proxy_ext_linux_x86_64",
    srcs = [":mcp_re_proxy_ext_bin"],
    target_platform = "//platforms:linux_x86_64",
)

# Package the cross-compiled binary (+ its runfiles) under /app in the image.
pkg_tar(
    name = "mcp_re_proxy_ext_layer_x86_64",
    srcs = [":mcp_re_proxy_ext_linux_x86_64"],
    include_runfiles = True,
    package_dir = "/app",
)

# The single-arch linux/amd64 distroless image.
oci_image(
    name = "mcp_re_proxy_ext_image",
    # Single-arch: reference the platform-specific base repo directly (the
    # multi-platform `@distroless_cc_base` alias only resolves under a matching
    # incoming platform transition; this image is unconditionally linux/amd64).
    base = "@distroless_cc_base_linux_amd64",
    entrypoint = ["/app/mcp_re_proxy_ext_bin"],
    tars = [":mcp_re_proxy_ext_layer_x86_64"],
    workdir = "/app",
)

# Load the image into the local Docker daemon for verification.
oci_load(
    name = "mcp_re_proxy_ext_load",
    image = ":mcp_re_proxy_ext_image",
    repo_tags = ["mcp-re-proxy-ext:latest"],
)

# Push to the container registry. Defined only — DO NOT run without creds.
oci_push(
    name = "mcp_re_proxy_ext_push",
    image = ":mcp_re_proxy_ext_image",
    remote_tags = ["latest"],
    repository = "ghcr.io/matssun/code/mcp-re-proxy-ext",
)
